RESOLVED FIXED 131617
[CSSRegions] Incorrect background paint on positioned element hover
https://bugs.webkit.org/show_bug.cgi?id=131617
Summary [CSSRegions] Incorrect background paint on positioned element hover
Mihnea Ovidenie
Reported 2014-04-14 08:38:31 PDT
Created attachment 229284 [details] Test case Use the attach file and hover over the salmon background element -> only the overflow part has its background changed to lime.
Attachments
Test case (1.12 KB, text/html)
2014-04-14 08:38 PDT, Mihnea Ovidenie
no flags
Patch (6.28 KB, patch)
2014-04-17 09:01 PDT, Radu Stavila
no flags
Patch with fixed syling (6.33 KB, patch)
2014-04-17 09:06 PDT, Radu Stavila
abucur: review+
commit-queue: commit-queue-
Rebased patch (6.29 KB, patch)
2014-04-18 03:14 PDT, Radu Stavila
no flags
Added 'reviewed by' in ChangeLog (6.28 KB, patch)
2014-04-18 05:25 PDT, Radu Stavila
no flags
Fifth time's the charm... (6.28 KB, patch)
2014-04-18 05:31 PDT, Radu Stavila
no flags
Radu Stavila
Comment 1 2014-04-17 09:01:40 PDT
WebKit Commit Bot
Comment 2 2014-04-17 09:04:05 PDT
Attachment 229549 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:14: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Radu Stavila
Comment 3 2014-04-17 09:06:52 PDT
Created attachment 229550 [details] Patch with fixed syling
Andrei Bucur
Comment 4 2014-04-17 09:15:15 PDT
Comment on attachment 229550 [details] Patch with fixed syling r=me
WebKit Commit Bot
Comment 5 2014-04-18 00:25:59 PDT
Comment on attachment 229550 [details] Patch with fixed syling Rejecting attachment 229550 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 229550, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ons/repaint/repaint-absolute-pushed-to-next-region.html patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/rendering/RenderBox.cpp Hunk #1 FAILED at 2107. Hunk #2 succeeded at 2128 (offset 1 line). 1 out of 2 hunks FAILED -- saving rejects to file Source/WebCore/rendering/RenderBox.cpp.rej Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Andrei Bucur']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: http://webkit-queues.appspot.com/results/4881359197700096
Radu Stavila
Comment 6 2014-04-18 03:14:17 PDT
Created attachment 229636 [details] Rebased patch
WebKit Commit Bot
Comment 7 2014-04-18 03:49:06 PDT
Comment on attachment 229636 [details] Rebased patch Rejecting attachment 229636 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 229636, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output: http://webkit-queues.appspot.com/results/5096205222674432
Radu Stavila
Comment 8 2014-04-18 05:25:22 PDT
Created attachment 229640 [details] Added 'reviewed by' in ChangeLog
WebKit Commit Bot
Comment 9 2014-04-18 05:27:20 PDT
Comment on attachment 229640 [details] Added 'reviewed by' in ChangeLog Rejecting attachment 229640 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 229640, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output: http://webkit-queues.appspot.com/results/4885098990141440
Radu Stavila
Comment 10 2014-04-18 05:31:03 PDT
Created attachment 229641 [details] Fifth time's the charm...
WebKit Commit Bot
Comment 11 2014-04-18 06:08:21 PDT
Comment on attachment 229641 [details] Fifth time's the charm... Clearing flags on attachment: 229641 Committed r167489: <http://trac.webkit.org/changeset/167489>
Note You need to log in before you can comment on or make changes to this bug.