Source/WebCore/rendering/RenderBox.cpp
@@ -2108,8 +2108,14 @@ void RenderBox::computeRectForRepaint(const RenderLayerModelObject* repaintConta
     if (!o)
         return;
     
+    EPosition position = styleToUse.position();
+
     // This code isn't necessary for in-flow RenderFlowThreads.
-    if (o->isOutOfFlowRenderFlowThread()) {
+    // Don't add the location of the region in the flow thread for absolute positioned
+    // elements because their absolute position already pushes them down through
+    // the regions so adding this here and then adding the topLeft again would cause
+    // us to add the height twice.
+    if (o->isOutOfFlowRenderFlowThread() && position != AbsolutePosition) {
         RenderRegion* firstRegion = nullptr;
         RenderRegion* lastRegion = nullptr;
         if (toRenderFlowThread(o)->getRegionRangeForBox(this, firstRegion, lastRegion))
@@ -2121,8 +2127,6 @@ void RenderBox::computeRectForRepaint(const RenderLayerModelObject* repaintConta
 
     LayoutPoint topLeft = rect.location();
     topLeft.move(locationOffset());
-
-    EPosition position = styleToUse.position();
 
     // We are now in our parent container's coordinate space.  Apply our transform to obtain a bounding box
     // in the parent's coordinate space that encloses us.
